--- a/package.json
+++ b/package.json
@@ -1,21 +1,11 @@
 {
-  "name": "opinalia",
+  "name": "ServerMQ",
   "version": "1.0.0",
-  "description": "This is a project for the subject EA",
+  "description": "upc EA",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/EAGrup4/Server.git"
-  },
-  "author": "Grup04",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/EAGrup4/Server/issues"
-  },
-  "homepage": "https://github.com/EAGrup4/Server#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
